--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.45",
+    "emailjs-com": "^2.4.1",
     "fs": "0.0.1-security",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
